examples/datalog/08_negation/29_negation_with_agg.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_neg_agg
Knowledge graph 'test_neg_agg' created.
Switched to knowledge graph: test_neg_agg
> .kg use test_neg_agg
Switched to knowledge graph: test_neg_agg
> +sales[(1, "electronics", 1000), (2, "electronics", 2000), (3, "clothing", 500), (4, "clothing", 750)].
Inserted 4 fact(s) into 'sales'.
> +excluded[("food")].
Inserted 1 fact(s) into 'excluded'.
> cat_sales(Cat, <SUM:Amt>) :- sales(_, Cat, Amt), !excluded(Cat).
Script error: Parse error: Unknown aggregate function: 
